Update BrickDataManager to use List rather than LinkedList
Fixes https://github.com/wayfair/brickkit-android/issues/113